samples/_failures_safe/1761376762_a8dce8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6572b35.c: In function ‘main’:
./samples/SAFE/__tmp_e6572b35.c:161:17: error: expected declaration or statement at end of input
  161 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_e6572b35.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e6572b35.c:161:17: error: expected declaration or statement at end of input
